--- a/styles/sass/partials/_color-picker.scss
+++ b/styles/sass/partials/_color-picker.scss
@@ -20,6 +20,10 @@ License: MIT
     position: relative;
 }
 
+#element-settings-sidebar .sp-container {
+	position: fixed !important;
+}
+
 /* http://ansciath.tumblr.com/post/7347495869/css-aspect-ratio */
 .sp-top {
   position:relative;
